Remove interfaces vars from openshift-qe-installer-bm-deploy-commands.sh
Signed-off-by: Marius Cornea <mcornea@redhat.com>

--- a/ci-operator/config/openshift-eng/ocp-qe-perfscale-ci/openshift-eng-ocp-qe-perfscale-ci-main__metal-4.18-nightly-x86.yaml
+++ b/ci-operator/config/openshift-eng/ocp-qe-perfscale-ci/openshift-eng-ocp-qe-perfscale-ci-main__metal-4.18-nightly-x86.yaml
@@ -75,6 +75,8 @@ tests:
   restrict_network_access: false
   steps:
     cluster_profile: metal-perscale-cpt
+    env:
+      JETLAG_PR: "680"
     workflow: openshift-qe-installer-bm-deploy
   timeout: 7h0m0s
 - always_run: false
