--- a/ci-operator/config/redhat-performance/jetlag/redhat-performance-jetlag-main.yaml
+++ b/ci-operator/config/redhat-performance/jetlag/redhat-performance-jetlag-main.yaml
@@ -24,6 +24,7 @@ tests:
   steps:
     cluster_profile: metal-perfscale-jetlag
     env:
+      JETLAG_PR: "680"
       NUM_WORKER_NODES: "2"
     workflow: openshift-qe-installer-bm-deploy
 - always_run: false
@@ -44,6 +45,7 @@ tests:
   steps:
     cluster_profile: metal-perfscale-selfsched
     env:
+      JETLAG_PR: "680"
       TYPE: sno
     workflow: openshift-qe-installer-bm-self-sched-deploy
 - always_run: false
